--- a/css/style.css
+++ b/css/style.css
@@ -857,6 +857,20 @@ body.lock {
   }
 }
 
+.swiper {
+  width: 100%;
+  height: 300px;
+}
+
+.price-sale {
+  color: #FF2121;
+}
+
+.price-sold-out {
+  color: #000;
+  opacity: 0.3;
+}
+
 .accessories {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -868,6 +882,8 @@ body.lock {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  position: relative;
+  min-width: 0;
 }
 
 .accessories__title {
@@ -878,7 +894,72 @@ body.lock {
   font-weight: 700;
   font-size: 32px;
   line-height: 36px;
+  text-align: center;
   color: #000;
+}
+
+.accessories__slider {
+  position: relative;
+}
+
+.accessories__slider-item {
+  max-height: 240px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.accessories__slider-image {
+  width: 185px;
+}
+
+.accessories__slider-item-name {
+  font-size: 15px;
+  line-height: 18px;
+  text-align: center;
+  color: #FF4A32;
+  margin: 15px 0 5px 0;
+  max-width: 140px;
+  display: inline-block;
+}
+
+.accessories__slider-item-name:hover {
+  text-decoration: underline;
+}
+
+.accessories__slider-item-price {
+  font-size: 14px;
+  line-height: 18px;
+  color: #373737;
+}
+
+.swiper-button-prev, .swiper-button-next {
+  color: #000;
+  width: 55px;
+  height: 55px;
+  background: rgba(255, 255, 255, 0.75);
+  border-radius: 50%;
+  position: absolute;
+}
+
+.swiper-button-prev {
+  top: 45%;
+  left: 10px;
+}
+
+.swiper-button-next {
+  top: 45%;
+  right: 10px;
 }
 
 .footer {
